force-app/main/default/objects/SSP_TypeOfProof__mdt/SSP_TypeOfProof__mdt.object-meta.xml
<CustomObject>
    <description>Used to store mapping of each proof and their associated documents.</description>
    <label>SSP Type Of Proof</label>
    <pluralLabel>SSP Type Of Proofs</pluralLabel>
</CustomObject>