force-app/main/default/objects/SSP_TypeOfProof__mdt/fields/FileName__c.field-meta.xml
<CustomField>
    <fullName>FileName__c</fullName>
    <description>File Name from static resource, Including the static resource name.
        This file should be organized respective language folders &quot;en&quot; and &quot;es&quot;.
        File Names should match in both &quot;en&quot; and &quot;es&quot; folders

        In the file path there is no need to provide &quot;en&quot; or &quot;es&quot;, It will be dynamically added based on the language

        Ex:  doctemplate/Information Request-Landlord (PAFS-76).pdf</description>
    <inlineHelpText>File Name from static resource, Including the static resource name.
        This file should be organized respective language folders &quot;en&quot; and &quot;es&quot;.
        File Names should match in both &quot;en&quot; and &quot;es&quot; folders</inlineHelpText>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>