force-app/main/default/objects/SSP_TypeOfProof__mdt/fields/IsRecommended__c.field-meta.xml
<CustomField>
    <fullName>IsRecommended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag will be used to determine recommended type of proof that can be submitted.</description>
    <label>Is Recommended?</label>
    <type>Checkbox</type>
</CustomField>