force-app/main/default/objects/SSP_TypeOfProof__mdt/fields/K_Hipp_Proof__c.field-meta.xml
<CustomField>
    <fullName>K_Hipp_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether proof is K-HIPP Proof</description>
    <label>K-HIPP Proof</label>
    <type>Checkbox</type>
</CustomField>