force-app/main/default/objects/SSP_TypeOfProof__mdt/fields/Task_Code__c.field-meta.xml
<CustomField>
    <fullName>Task_Code__c</fullName>
    <label>Task Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>