force-app/main/default/objects/SSP_TypeOfProof__mdt/fields/TemplateTitle__c.field-meta.xml
<CustomField>
    <fullName>TemplateTitle__c</fullName>
    <description>Picklist to show the title of the required Proof, example Template</description>
    <label>Template Title</label>
    <type>Picklist</type>
    <valueSet>
        
        <restricted>true</restricted>
        
        <valueSetDefinition>
            
            
            <value>
                
                <fullName>Child Care Verification (PAFS-19)</fullName>
                
                
                <label>Child Care Verification (PAFS-19)</label>
                
            </value>
            
            <value>
                
                <fullName>Childs Certification of School Enrollment/Attendance (PA-33D)</fullName>
                
                
                <label>Childs Certification of School Enrollment/Attendance (PA-33D)</label>
                
            </value>
            
            <value>
                
                <fullName>Household Information Request (PA-21)</fullName>
                
                
                <label>Household Information Request (PA-21)</label>
                
            </value>
            
            <value>
                
                <fullName>Information Request-Landlord (PAFS-76)</fullName>
                
                
                <label>Information Request-Landlord (PAFS-76)</label>
                
            </value>
            
            <value>
                
                <fullName>Irregular Work Form (PAFS-121)</fullName>
                
                
                <label>Irregular Work Form (PAFS-121)</label>
                
            </value>
            
            <value>
                
                <fullName>Notice for Initial Job Search(DCC-90P)</fullName>
                
                
                <label>Notice for Initial Job Search(DCC-90P)</label>
                
            </value>
            
            <value>
                
                <fullName>Proof of Zero Income Form (PAFS-702)</fullName>
                
                
                <label>Proof of Zero Income Form (PAFS-702)</label>
                
            </value>
            
            <value>
                
                <fullName>Qualifying Income Trust (MAP-007)</fullName>
                
                
                <label>Qualifying Income Trust (MAP-007)</label>
                
            </value>
            
            <value>
                
                <fullName>Statement of Disability or Incapacity (FS-704)</fullName>
                
                
                <label>Statement of Disability or Incapacity (FS-704)</label>
                
            </value>
            
            <value>
                
                <fullName>Student Work Verification (DCC-90L)</fullName>
                
                
                <label>Student Work Verification (DCC-90L)</label>
                
            </value>
            
            <value>
                
                <fullName>Verification of Contributions - Loans - Roomer/Boarder Payments (PAFS-73)</fullName>
                
                
                <label>Verification of Contributions - Loans - Roomer/Boarder Payments (PAFS-73)</label>
                
            </value>
            
            <value>
                
                <fullName>Verification of Employment and Wages (PAFS-700)</fullName>
                
                
                <label>Verification of Employment and Wages (PAFS-700)</label>
                
            </value>
            
            <value>
                
                <fullName>Verification of Kentucky Works Program Participation (KW-33)</fullName>
                
                
                <label>Verification of Kentucky Works Program Participation (KW-33)</label>
                
            </value>
            
            <value>
                
                <fullName>Written Income Statement</fullName>
                
                
                <label>Written Income Statement</label>
                
            </value>
            
            <value>
                
                <fullName>Written Statement</fullName>
                
                
                <label>Written Statement</label>
                
            </value>
            
            <value>
                
                <fullName>Written Statement from Lender</fullName>
                
                
                <label>Written Statement from Lender</label>
                
            </value>
            
            <value>
                
                <fullName>Written Statement for Income or No Income</fullName>
                
                
                <label>Written Statement for Income or No Income</label>
                
            </value>
            
            <value>
                
                <fullName>Written Statement from Boarder</fullName>
                
                
                <label>Written Statement from Boarder</label>
                
            </value>
            
            <value>
                
                <fullName>Written Statement from Child Care Facility</fullName>
                
                
                <label>Written Statement from Child Care Facility</label>
                
            </value>
            
        </valueSetDefinition>
        
    </valueSet>
</CustomField>