force-app/main/default/objects/SSP_TypeOfProof__mdt/fields/TypeOfProof__c.field-meta.xml
<CustomField>
    <fullName>TypeOfProof__c</fullName>
    <description>Used to store the RFI type of proof details</description>
    <label>Type of Proof</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V003</fullName>
                <label>US Citizenship</label>
            </value>
            <value>
                <fullName>V004</fullName>
                <label>Verification of Immigration status</label>
            </value>
            <value>
                <fullName>V006</fullName>
                <label>Verification of lawful presence.</label>
            </value>
            <value>
                <fullName>V007</fullName>
                <label>Immigration Entry Date Verification</label>
            </value>
            <value>
                <fullName>V008</fullName>
                <label>Proof of termination of ESI coverage (Employer Sponsored Insurance).</label>
            </value>
            <value>
                <fullName>V009</fullName>
                <label>Proof of termination of other health care coverage (Minimum Essential Coverage)</label>
            </value>
            <value>
                <fullName>V010</fullName>
                <label>Identity</label>
            </value>
            <value>
                <fullName>V011</fullName>
                <label>Proof of not receiving Medicare benefits</label>
            </value>
            <value>
                <fullName>V012</fullName>
                <label>Employment History</label>
            </value>
            <value>
                <fullName>V018</fullName>
                <label>Residency</label>
            </value>
            <value>
                <fullName>V020</fullName>
                <label>Relationship Verification</label>
            </value>
            <value>
                <fullName>V032</fullName>
                <label>SEVIS ID Number for Lawful Presence Verification</label>
            </value>
            <value>
                <fullName>V037</fullName>
                <label>Lawful Presence Verification</label>
            </value>
            <value>
                <fullName>V041</fullName>
                <label>Earned Income Credit</label>
            </value>
            <value>
                <fullName>V050</fullName>
                <label>Earned Income Verification</label>
            </value>
            <value>
                <fullName>V051</fullName>
                <label>Gifts and Contributions Income</label>
            </value>
            <value>
                <fullName>V052</fullName>
                <label>Interest Income</label>
            </value>
            <value>
                <fullName>V053</fullName>
                <label>Notes Income</label>
            </value>
            <value>
                <fullName>V054</fullName>
                <label>Pension Income</label>
            </value>
            <value>
                <fullName>V055</fullName>
                <label>Prizes Income</label>
            </value>
            <value>
                <fullName>V056</fullName>
                <label>Railroad Retirement Income</label>
            </value>
            <value>
                <fullName>V058</fullName>
                <label>Royalties Income</label>
            </value>
            <value>
                <fullName>V059</fullName>
                <label>RSDI Income</label>
            </value>
            <value>
                <fullName>V060</fullName>
                <label>Self Employment Income</label>
            </value>
            <value>
                <fullName>V061</fullName>
                <label>SSI income</label>
            </value>
            <value>
                <fullName>V063</fullName>
                <label>UIB Income</label>
            </value>
            <value>
                <fullName>V064</fullName>
                <label>VA Benefit Income</label>
            </value>
            <value>
                <fullName>V065</fullName>
                <label>Workers Compensation Income</label>
            </value>
            <value>
                <fullName>V066</fullName>
                <label>Trust Proceeds Income</label>
            </value>
            <value>
                <fullName>V067</fullName>
                <label>Energy Payment Income</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>