force-app/main/default/objects/SSP_TypeOfProof__mdt/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>TypeOfProof__c</columns>
    <columns>DocumentType__c</columns>
    <columns>IsRecommended__c</columns>
    <columns>K_Hipp_Proof__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>